# Eedi_kaggle

./: 72b-rerank-eedi-cqyr-final-submission.ipynb  README.md  SETTINGS.json  Solution.md  requirements.txt  setup.sh
copasta/: README.md  requirements.txt  step2_merge_llm.ipynb
data/0.preprocessing/: train.csv
data/2.synthetic_data_generation/: README.md  download.py
data/2.synthetic_data_generation/misconception_augmentation/: misconception_mapping.csv
data/raw/: subject_metadata.csv
data/retrieve_train/: README.md
scripts/: prepare_data.py  test.ipynb
src/0.preprocessing/: README.md  create_index_db.py  run_subject_search.py
src/1.chain_of_thought/: README.md
src/1.preprocessing/: README.md  create_index_db.py  run_prepare_df.py
src/2.chain_of_thought/: README.md
src/2.synthetic_data_generation/: generation2.py  generation3.py
src/2.synthetic_data_generation/generation1/step5/: README.md
src/2.synthetic_data_generation/generation2/: README.md
src/2.synthetic_data_generation/misconception_augmentation/: 20241029-misconception-augmentation-llama-v2.ipynb  20241029-misconception-augmentation-llama.ipynb
src/3.retrieval/Pipeline2/: README.md
src/4.reranking/: .gitignore  README.md  config.yaml  df_train.parquet  eedi_metrics.py  exp_llama3.3_70B_train.ipynb  exp_qwen2.5_14B_train.ipynb  exp_qwen2.5_72B_train.ipynb  prepare_dataset.ipynb  pyproject.toml  quantize.py
src/chain_of_thought/: generate_cot.py  run_misunderstanding_cot_infer.py
src/preprocessing/: faiss_subject.index  preprocess.py
src/synthetic_data_generation/: generation1.py
(+51 files in other folders)
