[project]
name = "4-reranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "auto-round==0.3.1",
    "bitsandbytes==0.43.3",
    "ipykernel>=6.29.5",
    "omegaconf>=2.3.0",
    "peft==0.12.0",
    "polars==1.7.1",
    "sentence-transformers[train]==3.3.0",
    "setuptools>=75.6.0",
    "torch==2.4.0",
    "triton==3.0.0",
    "trl==0.11.1",
    "xformers==0.0.27.post2",
]

[tool.ruff]
select = [
    "ALL", 
]
ignore = [
    "D100",
    "D203",
    "D212",
    "D401",
    "RET504",
    "S101",
    "S311",
    "SIM108",
    "T201",
    "N812",
    "NPY002",
    "PTH"
]

line-length = 120
